fix(button): removed z-index from button

--- a/packages/Button/src/Button.scss
+++ b/packages/Button/src/Button.scss
@@ -148,7 +148,6 @@ $iconSize4: 30px;
         position: relative;
     }
     .children {
-        z-index: 1;
         width: 100%;
         height: 100%;
 
@@ -171,7 +170,6 @@ $iconSize4: 30px;
         left: 0;
         top: 0;
         animation: grow #{$rippleTiming}ms cubic-bezier(0, 0, 0.66, 1);
-        z-index: 1;
     }
     
     &.size4 .children {
